# Stacer

./: .babelrc  .buildStacer.sh.swp  .editorconfig  .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  Stacer-cfg.h.in  Stacer.pro  buildStacer.sh  deploy.sh  index.html  install.sh  main.js  package.json  release.sh  stacer-sudo.desktop  stacer.desktop  wget-log  wget-log.1
.github/: FUNDING.yml
DEBIAN/: changelog  control  copyright  postinst  postrm  prerm
Technical Documentation/: Stacer Technical Documentation - 01 Compile Instructions and Initial Code Assessment.docx
applications/: stacer.desktop
assets/css/: amaran.min.css  font.css  loader.css  style.css
assets/css/themes/: dark.css  light.css
assets/font/: stacer-fonts.eot
build-aux/: ac-headers.tar.xz  build-sdpp.sh
bundle/: index.html
cmake/: ByThaBranch.cmake  Sdbusplus.cmake
cmake/cxxbasics/: CXXBasics.cmake  DefaultSettings.cmake  InitCXXBasics.cmake
cmake/cxxbasics/accelerators/: UseCCache.cmake  UseCompilerCacheTool.cmake  UseFasterLinkers.cmake  UseSCCache.cmake
cmake/cxxbasics/compiler_detection/: GetTargetArch.cmake
debian/: changelog  control  copyright  install  postinst  postrm  rules
libs/: fast-search.js
pages/: login.html  startup-apps.html  system-cleaner.html  system-services.html  uninstaller.html
snap/: snapcraft.yaml
src/: amaran.min.js  app.js  config.js  dashboard.js  helpers.js  index.js  progressbar.min.js  services.js  stacer.js  startup-apps.js  system-cleaner.js  uninstaller.js
src/components/: App.js  CircleBar.js  CpuBar.js  Dashboard.js  DiskBar.js  DownBar.js  MemoryBar.js  Services.js  StartupApps.js  SystemCleaner.js  SystemInfo.js  Uninstaller.js  UpBar.js
src/languages/: Language.js  lang-list.js  lang.de.js
src/store/: index.js
src/utils/: config.js  helpers.js
stacer/: CMakeLists.txt  app.cpp  app.h  app.ui  feedback.cpp  feedback.h  feedback.ui  limit_process_widget.cpp  limit_process_widget.h  main.cpp  signal_mapper.cpp  signal_mapper.h  sliding_stacked_widget.cpp  slidingstackedwidget.cpp  slidingstackedwidget.h  stacer.pro  static.qrc  utilities.h
stacer-core/: CMakeLists.txt  stacer-core.pro  stacer-core_global.h
stacer-core/Info/: cpu_info.cpp  cpu_info.h  disk_info.cpp  disk_info.h  gpu_info.cpp  gpu_info.h  memory_info.cpp  memory_info.h  network_info.cpp  network_info.h  process.cpp  process.h  process_info.cpp  process_info.h  system_info.cpp  system_info.h
stacer-core/Tools/: apt_source_tool.cpp  apt_source_tool.h  gnome_schema.h  gnome_settings_tool.cpp  gnome_settings_tool.h  package_tool.cpp  package_tool.h  service_tool.cpp  service_tool.h
stacer-core/Types/: command.cpp  command.hpp  metacallback.hpp
stacer-core/Types/Applications/: broken_app.cpp  broken_app.h  desktop.cpp  desktop.h
stacer-core/Utils/: command_util.cpp  command_util.h  file_util.cpp  file_util.h  format_util.cpp  format_util.h
stacer/Managers/: app_manager.cpp  app_manager.h  info_manager.cpp  info_manager.h  setting_manager.cpp  setting_manager.h  tool_manager.cpp  tool_manager.h
stacer/Pages/AptSourceManager/: apt_source_edit.cpp  apt_source_edit.h  apt_source_edit.ui  apt_source_manager_page.cpp  apt_source_manager_page.h  apt_source_manager_page.ui  apt_source_repository_item.cpp  apt_source_repository_item.h  apt_source_repository_item.ui
stacer/Pages/Dashboard/: circlebar.cpp  circlebar.h  circlebar.ui  dashboard_page.cpp  dashboard_page.h  dashboard_page.ui  linebar.cpp  linebar.h  linebar.ui
stacer/Pages/GnomeSettings/: appearance_settings.cpp  appearance_settings.h  appearance_settings.ui  gnome_settings_page.cpp  gnome_settings_page.h  gnome_settings_page.ui  unity_settings.cpp  unity_settings.h  unity_settings.ui  window_manager_settings.cpp  window_manager_settings.h  window_manager_settings.ui
stacer/Pages/Helpers/: helpers_page.cpp  helpers_page.h  helpers_page.ui  host_manage.cpp  host_manage.h  host_manage.ui
stacer/Pages/PPAManager/: ppa_manager.cpp  ppa_manager.h  ppa_manager.ui  ppa_manager_page.cpp  ppa_manager_page.h  ppa_manager_page.ui  ppa_repository_item.cpp  ppa_repository_item.h  ppa_repository_item.ui
stacer/Pages/Processes/: processes_page.cpp  processes_page.h  processes_page.ui  processes_page.ui.save
stacer/Pages/Resources/: history_chart.cpp  history_chart.h  history_chart.ui  resources_page.cpp  resources_page.h  resources_page.ui
stacer/Pages/Search/: search_page.cpp  search_page.h  search_page.ui
stacer/Pages/Services/: service_item.cpp  service_item.h  service_item.ui  services_page.cpp  services_page.h  services_page.ui
stacer/Pages/Settings/: settings_page.cpp  settings_page.h  settings_page.ui
stacer/Pages/StartupApps/: startup_app.cpp  startup_app.h  startup_app.ui  startup_app_edit.cpp  startup_app_edit.h  startup_app_edit.ui  startup_apps_page.cpp  startup_apps_page.h  startup_apps_page.ui
stacer/Pages/SystemCleaner/: byte_tree_widget.cpp  byte_tree_widget.h  system_cleaner_md_dialog.cpp  system_cleaner_md_dialog.h  system_cleaner_md_dialog.ui  system_cleaner_md_preset.cpp  system_cleaner_md_preset.h  system_cleaner_mediadir.cpp  system_cleaner_mediadir.h  system_cleaner_page.cpp  system_cleaner_page.h  system_cleaner_page.ui
stacer/Pages/Uninstaller/: uninstaller_page.cpp  uninstaller_page.h  uninstallerpage.ui
stacer/static/: default_mdir.json  languages.json  themes.json
stacer/static/themes/default/style/: style.qss  values.ini
stacer/static/themes/light/style/: style.qss  values.ini
style/css/: style.css  style.min.css
tests/: CMakeLists.txt
tests/stacer-core/: desktop_apps.cpp
translations/: stacer_ar.ts  stacer_ca-es.ts  stacer_cs.ts  stacer_de.ts  stacer_en.ts  stacer_es.ts  stacer_eu.ts  stacer_fr.ts  stacer_gl.ts  stacer_hi.ts  stacer_hu.ts  stacer_it.ts  stacer_kn.ts  stacer_ko.ts  stacer_ml.ts  stacer_nl.ts  stacer_oc.ts  stacer_pl.ts  stacer_pt.ts  stacer_ro.ts  stacer_ru.ts  stacer_sv.ts  stacer_tr.ts  stacer_ua.ts  stacer_uk.ts  stacer_vi.ts  stacer_vn.ts  stacer_zh-cn.ts  stacer_zh-tw.ts  stacer_zh_cn.ts
(+51 files in other folders)
